<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"

    android:orientation="horizontal"
    android:padding="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/test_list_recyclerview_item_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:background="@drawable/buttonbg"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/test_list_recyclerview_item_chartButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/buttonbg"
                android:drawableLeft="@drawable/ic_baseline_show_chart_24"
                android:text="@string/open_the_chart" />

            <Button
                android:id="@+id/test_list_recyclerview_item_listButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@drawable/buttonbg"
                android:drawableLeft="@drawable/ic_baseline_table_rows_24"
                android:text="@string/open_list" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/test_list_recyclerview_item_deleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@drawable/buttonbg"
        android:drawableTop="@drawable/ic_baseline_delete_24"
        android:drawablePadding="-20sp"
        android:text="@string/delete"
        android:textColor="#FFFFFFFF"
        android:textSize="18sp" />

</LinearLayout>